import { StringRequest } from "@shared/proto/cline/common"
import { McpServiceClient } from "@/services/grpc-client"

/**
 * Matrix Parse Agent - 处理CAN功能矩阵定义文件的AI Agent
 *
 * 工作流程:
 * 1. 用户上传厂商定义的CAN功能矩阵定义文件
 * 2. 调用自定义MCP Server将文件转换为标准DBC文件
 * 3. 验证DBC文件内容有效性
 * 4. 询问用户是否将DBC文件转换为C/Java代码
 * 5. 调用MCP Server读取DBC文件并生成代码
 * 6. 对生成的代码进行规则检查和语法检查
 * 7. 修正发现的错误并输出最终代码文件
 */

export class MatrixParseAgent {
	private taskId: string

	constructor() {
		this.taskId = Date.now().toString()
	}

	/**
	 * 第一步：将上传的矩阵文件转换为DBC文件
	 * @param fileContent 上传的矩阵文件内容
	 * @returns 生成的DBC文件内容
	 */
	async convertMatrixToDbc(matrixContent: string): Promise<string> {
		try {
			// 调用MCP Server的工具将矩阵文件转换为DBC文件
			const response = await McpServiceClient.getLatestMcpServers({})

			// 模拟转换过程，实际应该调用具体的MCP工具
			// 这里返回模拟的DBC内容
			return `VERSION "1.0"
NS_ : 
    NS_DESC_
    CM_
    BA_DEF_
    BA_
    VAL_
    CAT_DEF_
    CAT_
    FILTER
    BA_DEF_DEF_
    EV_DATA_
    ENVVAR_DATA_
    SGTYPE_
    SGTYPE_VAL_
    BA_DEF_SGTYPE_
    BA_SGTYPE_
    SIG_VALTYPE_
    SIGTYPE_VALTYPE_
    BO_TX_BU_
    BA_DEF_REL_
    BA_REL_
    BA_DEF_DEF_REL_
    BU_SG_REL_
    BU_EV_REL_
    BU_BO_REL_
    SG_MUL_VAL_

BS_:

BU_:

BO_ 1234 TestMessage: 8 Vector__XXX
 SG_ TestSignal : 0|8@1+ (1,0) [0|255] "" Vector__XXX`
		} catch (error) {
			throw new Error(`转换矩阵文件时出错: ${error instanceof Error ? error.message : String(error)}`)
		}
	}

	/**
	 * 第二步：验证DBC文件内容的有效性
	 * @param dbcContent DBC文件内容
	 * @returns 验证结果
	 */
	async validateDbcFile(dbcContent: string): Promise<{ isValid: boolean; errors: string[] }> {
		try {
			// 调用MCP Server的工具验证DBC文件
			const response = await McpServiceClient.getLatestMcpServers({})

			// 模拟验证过程
			return {
				isValid: true,
				errors: [],
			}
		} catch (error) {
			return {
				isValid: false,
				errors: [error instanceof Error ? error.message : String(error)],
			}
		}
	}

	/**
	 * 第三步：将DBC文件转换为指定语言的代码
	 * @param dbcContent DBC文件内容
	 * @param language 目标语言 ('c' 或 'java')
	 * @returns 生成的代码
	 */
	async convertDbcToCode(dbcContent: string, language: "c" | "java"): Promise<string> {
		try {
			// 调用MCP Server的工具将DBC文件转换为代码
			const response = await McpServiceClient.getLatestMcpServers({})

			// 根据语言生成不同的代码模板
			if (language === "c") {
				return `#include "can_message.h"

// CAN消息定义
typedef struct {
    uint8_t test_signal;
} TestMessage_t;

// 发送TestMessage
void send_TestMessage(TestMessage_t* msg) {
    // 实现发送逻辑
}

// 接收TestMessage
void receive_TestMessage(TestMessage_t* msg) {
    // 实现接收逻辑
}`
			} else {
				return `public class CanMessage {
    private int testSignal;
    
    public CanMessage(int testSignal) {
        this.testSignal = testSignal;
    }
    
    public int getTestSignal() {
        return testSignal;
    }
    
    public void setTestSignal(int testSignal) {
        this.testSignal = testSignal;
    }
}`
			}
		} catch (error) {
			throw new Error(`生成${language.toUpperCase()}代码时出错: ${error instanceof Error ? error.message : String(error)}`)
		}
	}

	/**
	 * 第四步：验证生成的代码是否符合编码规则
	 * @param code 生成的代码
	 * @param language 代码语言
	 * @returns 验证结果
	 */
	async validateGeneratedCode(code: string, language: "c" | "java"): Promise<{ isValid: boolean; errors: string[] }> {
		try {
			// 调用MCP Server的工具验证生成的代码
			const response = await McpServiceClient.getLatestMcpServers({})

			// 模拟验证过程
			return {
				isValid: true,
				errors: [],
			}
		} catch (error) {
			return {
				isValid: false,
				errors: [error instanceof Error ? error.message : String(error)],
			}
		}
	}

	/**
	 * 第五步：使用Cline内置功能对代码进行语法检查和修正
	 * @param code 需要检查的代码
	 * @param language 代码语言
	 * @returns 修正后的代码
	 */
	async syntaxCheckAndFix(code: string, language: "c" | "java"): Promise<string> {
		try {
			// 调用MCP Server的工具进行语法检查和修正
			const response = await McpServiceClient.getLatestMcpServers({})

			// 模拟语法检查过程，返回原始代码
			return code
		} catch (error) {
			throw new Error(`语法检查时出错: ${error instanceof Error ? error.message : String(error)}`)
		}
	}

	/**
	 * 第六步：将最终代码文件输出到用户项目目录
	 * @param code 最终代码
	 * @param language 代码语言
	 * @param fileName 文件名
	 */
	async saveCodeToFile(code: string, language: "c" | "java", fileName: string): Promise<string> {
		try {
			// 调用MCP Server的工具保存代码文件
			const response = await McpServiceClient.getLatestMcpServers({})

			// 模拟保存过程，返回文件路径
			return `/project/src/${fileName}`
		} catch (error) {
			throw new Error(`保存代码文件时出错: ${error instanceof Error ? error.message : String(error)}`)
		}
	}
}

// 导出Agent实例
export const matrixParseAgent = new MatrixParseAgent()
